# Kratos_codes

./: HE2D_iter.py  HE2D_prueba.py  HE3D_iter.py  coupled_full_iter.py  navier_stokes_solver_vmsmonolithic.py
HE3D/: HE3D.py  cylinder.mdpa  cylinder.time  fluid.time  problem_properties.py
HeatEquationApplication/: CMakeLists.txt  HeatEquationApplication.py  example.time  heat_equation_application.cpp  heat_equation_application.h  prepare_cmake.sh
HeatEquationApplication/custom_conditions/: heat_equation_Neumann_condition.cpp  heat_equation_Neumann_condition.h
HeatEquationApplication/custom_elements/: heat_equation.cpp  heat_equation.h
HeatEquationApplication/custom_process/: compute_body_force_process.h
HeatEquationApplication/custom_python/: add_custom_utilities_to_python.cpp  heat_equation_python_application.cpp
HeatEquationApplication/custom_strategies/: bussinesq_process.py
HeatEquationApplication/custom_utilities/: Compute_Boussinesq.cpp  Compute_Boussinesq.h
HeatEquationApplication/python_scripts/: CFD_thermal_solver.py  NonConformant_OneSideMap.py  heat_equation_solver.py  non_conformant_map_process.py
HeatEquationApplication/symbolic_generation/: generate_heat_equation_element.py  heat_equation_template.cpp
casos_OK/ConvDominant/: ConvDominant.mdpa  ConvDominant.py
casos_OK/PureDiff/: PureDiff.mdpa  PureDiff.py  print.py
casos_OK/SGS/: 'Zoom.msh  'Zoom.res  'Zoom.vv  SGS.mdpa  SGS.py
casos_OK/coupled_full/: connectivitymapper.py  coupled_fluid_temp.mdpa  coupled_full.py  coupled_solid.mdpa  problem_properties
casos_OK/coupled_hole/: coupled_fluid_temp.mdpa  coupled_fluid_vel.mdpa  coupled_hole.py  print.py  problem_properties
geometry/2D_OK/HT2D_T_m.gid/: HT2D_T_m.geo  HT2D_T_m.info  HT2D_T_m.spd  HT2D_T_m.vv  ProjectParameters.json
geometry/2D_OK/acotado.gid/: acotado.geo  acotado.prj  acotado.spd  acotado.vv
geometry/2D_OK/cylinders.gid/: ProjectParameters.json  cylinders.err  cylinders.geo  cylinders.info  cylinders.mdpa  cylinders.msh  cylinders.prj  cylinders.spd  cylinders.time  cylinders.vv
geometry/3D_OK/cylinders.gid/: cylinders.geo  cylinders.msh  cylinders.rdr  cylinders.vv
geometry/3D_OK/fluid.gid/: fluid.geo  fluid.msh  fluid.vv
geometry/3D_OK/full.gid/: full.geo  full.msh  full.rdr  full.vv
geometry/coupled_full/coupled_fluid_hole.gid/: ProjectParameters.json  coupled_fluid_hole.geo  (+8 more)
(+11 files in other folders)
